--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -2,3 +2,27 @@
     height: 450px;
     width: 845px;
 }
+
+.blog-container{
+    border-bottom: 1px solid rgb(87, 87, 87);
+    padding: 10px;
+}
+
+.authorinfo{
+    display: flex;
+    justify-content: space-between;
+}
+
+.para{
+    font-size: 13px;
+}
+
+.bookmark{
+    height: 18px;
+    width: 15px;
+}
+
+.bookmark:hover{
+    content: url("public/bookmark-solid.svg");
+    cursor: pointer;
+}
