--- a/src/components/Blogs/Blogs.css
+++ b/src/components/Blogs/Blogs.css
@@ -1,8 +1,8 @@
 .blog-page-container{
     display: grid;
-    grid-template-columns: 4fr 1fr;
+    grid-template-columns: 2fr 1fr;
 }
-.blog-container{
+.blogs-container{
     display: grid;
     grid-template-rows: repeat(4, 1fr);
     gap: 45px;
