--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,6 +1,8 @@
 .authorImg{
-    width: 100px;
+    width: 70px;
     border-radius: 50%;
+    margin: auto;
+    padding: 20px;
 }
 .navbar{
     display: flex;
