::card_file_box:: updated data

--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -14,12 +14,15 @@
 }
 
 .para{
+    display: flex;
     font-size: 13px;
+    justify-content: center;
 }
 
 .bookmark{
     height: 18px;
     width: 15px;
+    padding: 1px;
 }
 
 .bookmark:hover{
