:construction: showing bookmarks

--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -29,3 +29,12 @@
     content: url("public/bookmark-solid.svg");
     cursor: pointer;
 }
+
+.mark{
+    cursor: pointer;
+}
+
+.bookmarks{
+    display: flex;
+    flex-direction: column;
+}
