--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -1,6 +1,7 @@
 .blog-img{
     height: 450px;
     width: 845px;
+    max-width: 100%;
 }
 
 .blog-container{
@@ -20,8 +21,8 @@
 }
 
 .bookmark{
-    height: 18px;
-    width: 15px;
+    height: 25px;
+    width: 20px;
     padding: 1px;
 }
 
