:lipstick: some more style changes

--- a/src/components/Bookmark/Bookmark.css
+++ b/src/components/Bookmark/Bookmark.css
@@ -1,7 +1,6 @@
 .book{
-    padding: 10px 0;
+    padding: 10px 10px;
     margin: 20px 0;
     margin-right: 20px;
     background-color: rgb(133, 133, 133);
-
 }
